Reworked booking tables, added stripe